25.jul (ws)
      - fix #11682: remove menubar icons for OSX
      - fix #11657: save preferences on OSX using the native format
      - fix #11669: self-explaining name for "dev-build"
24.jul (ws)
      - fix #11642: score layout scrambled after first page
      (lv)
      - disabled writing MusicXML lyric extend element, as it currently doesn't work
23.jul (lv)
      - fix #11641 Compressed MusicXML does not open
      - fix #11226 MusicXML exports treble clefs only
      - fix crash when importing musicxml lyrics
      - remove spurious "Unknown Node <staff>" or "... <voice>" messages on MusicXML import
22.jul (lv)
      - fix #10849: musicxml exports lyrics only with notes in voice 1
21.jul
      - Element->canvasPos() is now page relative; Page->canvasPos() is zero for all pages
      (la)
      - fix #11605: Shift-X with measure selected -> crash
20.jul (lv)
      - fix #11245: MusicXML doesn't save Tempo Text if there's no name
      - fix #11441: Failure to read MusicXML file with missing parts
      - fix MusicXML import/export of notehead color
      - add MusicXML testfile for noteheads
18.jul (ws)
      - fix #11530: Creation from template partially broken
      - fix #11554: In "Single Palette Mode" the previous palette collapses only
        half way (patch from mokaspar)
      - #11558: pinch gesture for zooming in and out (patch from mokaspar)
      - fix #11524: no more recent files (patch from mokaspar)
      - fix #11108: Clicking on Piano Keyboard with no score causes crash
      - fix #11565: closing drumset after closing score causes crash
      - fix #11557: slow scroll events on the scoreview get lost
        (patch from mokaspar)
14.jul (ws)
      - fix #6380: Conflicting flag directions for sub-beams
13.jul (ws)
      - fix #11469: Selecting "Time Signatures" in palette causes crash
      - fix non default profile: missing palette symbols
      - fix #11473: Preference values overwritten on program initialisation
11.jul (ws)